fix grammar of text

--- a/templates/registration/registration_complete.html
+++ b/templates/registration/registration_complete.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <div style="padding-left:20px;">
-	<p>{% trans "You are have successfull signed up." %}</p>
+	<p>{% trans "You have successfully signed up." %}</p>
 	<p><a class="btn btn-default" href="{% url 'auth_login' %}">{% trans "Sign in" %}</a></p>
 </div>
 {% endblock %}
