--- a/templates/perm.html
+++ b/templates/perm.html
@@ -102,7 +102,7 @@
                     <label for="perm_list">Available Permissions</label>
                     <select id="perm_list" multiple class="form-control">
                     </select>     
-                    <input id="set_constraint" class="btn btn-default" type="button" value="Set SSD Constraint">
+                    <input id="perm_set_constraint" class="btn btn-default" type="button" value="Set SSD Constraint">
                   </div>
                 </div>  
             </div>
@@ -112,7 +112,7 @@
                     <label for="dmeps">Direct Mutual Exclusions</label>
                     <select id="dmeps" multiple class="form-control">
                     </select>     
-                    <input id="unset_constraint" class="btn btn-default" type="button" disabled="false" value="Unset SSD Constraint">     
+                    <input id="perm_unset_constraint" class="btn btn-default" type="button" disabled="false" value="Unset SSD Constraint">     
                   </div>
                 </div>  
             </div>
