--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -674,7 +674,7 @@ var url_unset_ssd_perm_constraint = "{% url 'unset_ssd_perm_constraint' %}"
 var url_set_ssd_perm_constraint = "{% url 'set_ssd_perm_constraint' %}"
 
 var url_unset_ssd_role_constraint = "{% url 'unset_ssd_role_constraint' %}"
-var url_set_ssd_role_constraint = "{% url 'unset_ssd_role_constraint' %}"
+var url_set_ssd_role_constraint = "{% url 'set_ssd_role_constraint' %}"
 
 // edit init
 var url_edit_objective_init = "{% url 'edit_objective_init' %}"
@@ -739,6 +739,10 @@ var url_get_permission_list = "{% url 'get_permission_list' %}"
 var url_get_all_conditions = "{% url 'get_all_conditions' %}"
 var url_get_context_constraints = "{% url 'get_context_constraints' %}"
 var url_get_ssd_perm_constraints = "{% url 'get_ssd_perm_constraints' %}"
+
+var url_perm_role_assign = "{% url 'perm_role_assign' %}"
+var url_perm_role_revoke = "{% url 'perm_role_revoke' %}"
+
 
 var mode = 0; // edit mode, common var to all
 
