--- a/templates/role.html
+++ b/templates/role.html
@@ -291,8 +291,8 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="form-group">
-                                <label for="perm_list">Available Permissions</label>
-                                <select id="perm_list" multiple class="form-control" style="height:250px;">
+                                <label for="PRA_perm_list">Available Permissions</label>
+                                <select id="PRA_perm_list" multiple class="form-control" style="height:250px;">
                                 </select>
                                 <input id="assign_permission" class="btn btn-default" type="button" value="Assign Permission">
                             </div>
