SSD Role Constraints complete

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -743,6 +743,14 @@ var url_get_ssd_perm_constraints = "{% url 'get_ssd_perm_constraints' %}"
 var url_perm_role_assign = "{% url 'perm_role_assign' %}"
 var url_perm_role_revoke = "{% url 'perm_role_revoke' %}"
 
+// ssd role constraints
+
+var url_get_direct_ssd_role_constraints = "{% url 'get_direct_ssd_role_constraints' %}"
+var url_get_transitive_ssd_role_constraints = "{% url 'get_transitive_ssd_role_constraints' %}"
+var url_get_inherited_ssd_role_constraints = "{% url 'get_inherited_ssd_role_constraints' %}"
+
+
+
 
 var mode = 0; // edit mode, common var to all
 
