RRA implementation start

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -754,6 +754,12 @@ var url_revoke_permission = "{% url 'revoke_permission' %}"
 var url_get_all_directly_assigned_perms = "{% url 'get_all_directly_assigned_perms' %}"
 var url_get_all_transitively_assigned_perms = "{% url 'get_all_transitively_assigned_perms' %}"
 
+// RRA
+
+var url_add_junior_role_relation = "{% url 'add_junior_role_relation' %}"
+var url_remove_junior_role_relation = "{% url 'remove_junior_role_relation' %}"
+var url_add_senior_role_relation = "{% url 'add_senior_role_relation' %}"
+var url_remove_senior_role_relation = "{% url 'remove_senior_role_relation' %}"
 
 
 
