RRA - interim backup

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -761,6 +761,11 @@ var url_remove_junior_role_relation = "{% url 'remove_junior_role_relation' %}"
 var url_add_senior_role_relation = "{% url 'add_senior_role_relation' %}"
 var url_remove_senior_role_relation = "{% url 'remove_senior_role_relation' %}"
 
+var url_get_direct_junior_roles = "{% url 'get_direct_junior_roles' %}"
+var url_get_direct_senior_roles = "{% url 'get_direct_senior_roles' %}"
+var url_get_transitive_junior_roles = "{% url 'get_transitive_junior_roles' %}"
+var url_get_transitive_senior_roles = "{% url 'get_transitive_senior_roles' %}"
+
 
 
 
